--- a/react/src/components/Header.css
+++ b/react/src/components/Header.css
@@ -1,14 +1,10 @@
-@font-face {
-  font-family: 'JungkaBold';
-  src: url('/fonts/Jungka-Bold.otf');
-}
-
 .header {
   padding-bottom: 2vh;
   padding-top: 2vh;
   padding-left: 1.2vw;
   border-bottom: 0.1vh solid #242730;
-  font-family: 'JungkaBold';
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
   color: #FC6054;
   font-size: 3vh;
   height: 8vh;
